# TSV

./: .gitignore  Cargo.toml
config/: config.json
src/: main.rs
src/configuration/: configuration_read_error.rs  configuration_reader.rs  json_configuration_reader.rs  mod.rs  tsv_configuration.rs
src/events/: command.rs  command_parse_result.rs  command_parser.rs  default_command_parser.rs  event_handle_error.rs  mod.rs  tsv_event_handler.rs  tsv_state.rs
src/events/commands/: command.rs  command_parse_result.rs  command_parser.rs  default_command_parser.rs  mod.rs
src/messages/: messages.rs
src/quotes/: quotes.rs
tests/config/: test_config.json
