[package]
name = "tsv"
version = "0.1.0"
authors = ["Warhorst <46809804+Warhorst@users.noreply.github.com>"]
edition = "2018"


[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "voice"]
version = "0.8"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
